# torch

./: .gitignore  APPROACH.md  README.md  commit_msg.txt  pyproject.toml
app/: agent.py  llm.py  main.py  model.py  schemas.py  test.ipynb  tools.py  vectorstore.py
app/artifacts/: model.pkl
data/: new_record.json  records.csv
data/documents/: REC_0001.txt  REC_0002.txt  REC_0003.txt  REC_0004.txt  REC_0005.txt  REC_0006.txt  REC_0007.txt  REC_0008.txt  REC_0009.txt  REC_0010.txt  REC_0011.txt  REC_0012.txt  REC_0013.txt  REC_0014.txt  REC_0015.txt  REC_0016.txt  REC_0017.txt  REC_0018.txt  REC_0019.txt  REC_0020.txt  REC_0021.txt  REC_0022.txt  REC_0023.txt  REC_0024.txt  REC_0025.txt  REC_0026.txt  REC_0027.txt  REC_0028.txt  REC_0029.txt  REC_0030.txt  REC_0031.txt  REC_0032.txt  REC_0033.txt  REC_0034.txt  REC_0035.txt  REC_0036.txt  REC_0037.txt  REC_0038.txt  REC_0039.txt  REC_0040.txt  (+460 more)
evals/: eval.py  eval_results.json  eval_results_viewer.html  eval_set.json
notebooks/: modelling.ipynb  modelling_2.ipynb
scripts/: generate_data.py  generate_eval_set.py
